rewrote part of the Bandstructure discussion of GeTe

--- a/papers/Rashba/Rashba.tex
+++ b/papers/Rashba/Rashba.tex
@@ -79,7 +79,7 @@ With $l_y = -i\hbar(z \partial_x - x \partial_z )$ we get that
 	\Bra{\alpha(\bm{k})} l_y \Ket{\alpha(\bm{k})} = c(k_x) = k_x \frac{e E_z \sum_{\bm{n}} n_x^2d_z^0(\bm{n})}{E_{p_z} - E_{p_x}}
 \end{equation}
 \lp{normalization!!}
-A similar term exists for $l_x$, but with the opposite sign. If the atomic spin-orbit coupling, $\lambda \bm{l}\cdot\bm{\sigma}$, is then taken into account, we get to a contribution to the energy dispersion $\varepsilon(\bm{k}) \sim E_z (k_x \sigma_y - k_y \sigma_x)$ which has exactly the form of a Rashba splitting. 
+A similar term exists for $l_x$, but with the opposite sign. If the atomic spin-orbit coupling, $\lambda \bm{l}\cdot\bm{\sigma}$, is then taken into account, we get to a contribution to the energy dispersion $\varepsilon(\bm{k}) \propto E_z (k_x \sigma_y - k_y \sigma_x)$ which has exactly the form of a Rashba splitting. 
 This shows that the inversion symmetry breaking term will lead to a linear variation of the orbital angular momentum. When the orbitals originate from an atom with non-negligible atomic spin-orbit coupling , this linear variation of the OAM will lead to a contribution to the dispersion that varies linearly with $\bm{k}$, either upwards or downwards depending on the sign of $\sigma$. Except for the atomic spin-orbit coupling, which can be large, this effect is purely based around electrostatic considerations and thus does not suffer from the same minuscule prefactor as the purely relativistic Rashba effect.
 
 This assumes that the states at the high symmetry point ($|k|=0$) have a fully quenched OAM, however, when spin-orbit coupling is included, this is only partially true. Due to the energy contribution from $H_{soc}$ the material can gain by creating orbitals that have $\bm{j} = \bm{l} + \bm{\sigma}$. Similar to the above derivation, we can look at a small-$k$ expansion for orbitals that have nonzero OAM.
@@ -113,29 +113,19 @@ With the understanding that one can find Rashba like dispersions, coming not fro
 The space group of GeTe is R$3m$ (\#160 in International Tables), with ferroelectric polarization along the threefold rotation $z$-axis caused by an off-centering of the central Te atom \cite{Rabe1987} as displayed in Fig. \ref{fig:eigvalsdos}-(a). The valence and conduction bands are formed mostly by $s$ and $p$ orbitals from Te and Ge, respectively. This, together with the large spin-splitting in the vicinity of the $Z$ point \cite{DiSante2013} as observed from the bandstructure in Fig. \ref{fig:eigvalsdos}-(b), lends it as a perfect test-case of the above described mechanisms. Moreover, since it's a bulk material, we can rule out the possibility that the relativistic Rashba effects results in a contribution from the existence of possible large potential gradients at a surface. The band structure,  presents a distinct large linear spin splitting around the $Z$ point, resembling the well known Rashba effect. Due to time reversal symmetry, no spin-splitting is only present observed along the $Z-A$ and $Z-U$ paths, not the $Z-\Gamma$ path.
 The density of states (DOS), displayed in Fig.~\ref{fig:eigvalsdos}-(c), confirms the orbital character of the bands, aluded to earlier.
 % The valence bands are comprised mostly of Te 5p orbitals, whereas the conduction bands are mostly formed by Ge 4p orbitals. This orbital character of valence and conduction bands, together with the stronger atomic SOC on Te atom, results in a more pronounced spin splitting in the valence bands. We will focus on the first three valence bands, the top one of which mainly has $p_z$ character whereas the two lower bands, which are degenerate at the $Z$-point, are formed by $p_x$ and $p_y$ orbitals. The crystal field splitting between bands of $p_z$ and $p_{x,y}$ characters results from the distortion of the ideal Te-Ge$_6$ octahedron.
-\section{Interplay of ferroelectricity, orbital angular momentum and spin-orbit coupling}
+\section{Band structure}
 % % ~\centering
 \begin{figure}[b!]
 \IncludeGraphics[width=\linewidth]{interference.png}
 \caption{\label{fig:interference}Interference between orbitals with nonzero OAM. Three neighboring unit cells are displayed, each with the same $p_x + ip_z$ orbital (thus having nonzero $l_y$). The wave functions of the left and right unit cells have their phase rotated by the plane-wave part $e^{i k_x R_x}$. The amplitude and phase of the wave function are encoded with the length and polar angle of the arrows.}
 \end{figure}
-If 
-The $k$-dependent spin splitting, shown in Fig.~\ref{fig:eigvalsdos}, could be (incorrectly) attributed to a Rashba effect, described by the relativistic Rashba Hamiltonian \cite{Rashba1959SymmetryAr, Lifshitz1982CourseTheory},
+The bands we will focus on most are the three topmost valence bands. As seen in Fig. \ref{fig:eigvalsdos}-(a), these bands have the largest spin-splitting, giving already a hint that as shown above, the atomic SOC is an important part, since it's bigger on Te, where the orbitals comprising these bands originate from. If one were to fit the dispersion from the topmost valence band to the form of the Rashba Hamiltonian \cite{Rashba1959SymmetryAr, Lifshitz1982CourseTheory},
 \begin{equation}\label{eq:relrashba}
 \mathcal{H}_R=\alpha_R (\bm{k} \times \bm{E})\cdot \bm{\sigma}, \quad \alpha_R=\frac{e\hbar^2}{2m^2c^2},
 \end{equation}
-where $\bm{E}$ originates from the ferroelectric polarization in the open circuit configuration, and with an abnormally large $\alpha_R\approx 30.7$~eV\.\angstrom \cite{DiSante2013}, while in the vacuum  $\alpha_R=10^{-6}$~eV. However, all known proper ferroelectrics do not support the polarization in an open boundary situation, where depolarizing fields are not screened \cite{Garrity2013Hyperferroelectrics:Polarization}.
-Secondly, it is a well known fact that the periodic boundary conditions for the potential used in DFT imply short circuit electric boundary conditions\cite{Meyer2008AbFields}, $\bm E=0$, causing the relativistic effect (\ref{eq:relrashba})to vanish.
+it would result in an abnormally large $\alpha_R\approx 30.7$~eV\.\angstrom \cite{DiSante2013}, while, as discussed before, a more realistic prefactor would be $\alpha_R=10^{-6}$~eV in the purely relativistic case inside the vacuum. This is even more abnormal considering the fact that this is a bulk material, and that it is known that proper ferroelectrics have zero polarization in open boundary conditions because the depolarizing fields are not screened. Moreover, in the periodic boundary conditions utilized by DFT, the potential mimics short circuit boundary conditions \cite{Meyer2008AbFields}, $\bm E=0$, which results in zero contribution from Eq. \ref{eq:relrashba}. 
 
-Another issue, as has been experimentally confirmed\cite{Krempasky2015SurfaceSemiconductor}, is that the orientation of the spin polarization of the spin-split subbands depends on the atomic orbitals that form the band.
-This is not accounted for by the relativistic Rashba effect, where the orientation of spin-polarization is uniquely defined by the vector product of the wave vector and the inversion symmetry breaking field (in our case the electric polarization).
-The last discrepancy is that the splitting depends strongly on the atomic SOC.
-It is then evident that the mechanism behind the spin splitting must be one that couples the atomic character of the bands (and their respective atomic SOC) to the electric polarization.
-In their seminal papers Park {\it et al.}~addressed these issues, focusing on surfaces. The pivotal role of OAM \cite{Park2011,Park2012,Park2015MicroscopicMomentum,Hong2015QuantitativeSplitting} was emphasized and shown to lead to a better description of the spin splitting.
-The underlying mechanism is that interference between neighboring atomic orbitals with nonzero OAM in the Bloch function can result in $k$-dependent charge asymmetry as shown in Fig.~\ref{fig:interference}. In the region of overlap between the central and left-shifted wavefunctions, a sum of their phases is shown by the resulting red arrow. This showcases the charge asymmetry due to the interference, creating a dipole along the $z$ axis in this specific case.
-The resulting electric dipole then couples to the inversion symmetry-breaking field at the surface, resulting in the splitting of OAM states, linear in $k$.
-This effect can also exist in bulk materials, where the inversion symmetry can be broken by, e.g., ferroelectric polarization or an external electric field.
-
+The last issue with the purely relativistic explanation, which has been confirmed experimentally\cite{Krempasky2015SurfaceSemiconductor}, lies in the orientation of the spin polarization of the split bands. According to Eq. \ref{eq:relrashba}, they should all be lined up. However, as has been shown and will be confirmed by our results below, the orientation depends on the character of the band, more specifically the value of the total angular momentum $j$. 
 
 \begin{figure}[t]
 ~\centering
