--- a/papers/Rashba/Rashba.tex
+++ b/papers/Rashba/Rashba.tex
@@ -113,20 +113,6 @@ With the understanding that one can find Rashba like dispersions, coming not fro
 The space group of GeTe is R$3m$ (\#160 in International Tables), with ferroelectric polarization along the threefold rotation $z$-axis caused by an off-centering of the central Te atom \cite{Rabe1987} as displayed in Fig. \ref{fig:eigvalsdos}-(a). The valence and conduction bands are formed mostly by $s$ and $p$ orbitals from Te and Ge, respectively. This, together with the large spin-splitting in the vicinity of the $Z$ point \cite{DiSante2013} as observed from the bandstructure in Fig. \ref{fig:eigvalsdos}-(b), lends it as a perfect test-case of the above described mechanisms. Moreover, since it's a bulk material, we can rule out the possibility that the relativistic Rashba effects results in a contribution from the existence of possible large potential gradients at a surface. The band structure,  presents a distinct large linear spin splitting around the $Z$ point, resembling the well known Rashba effect. Due to time reversal symmetry, no spin-splitting is only present observed along the $Z-A$ and $Z-U$ paths, not the $Z-\Gamma$ path.
 The density of states (DOS), displayed in Fig.~\ref{fig:eigvalsdos}-(c), confirms the orbital character of the bands, aluded to earlier.
 % The valence bands are comprised mostly of Te 5p orbitals, whereas the conduction bands are mostly formed by Ge 4p orbitals. This orbital character of valence and conduction bands, together with the stronger atomic SOC on Te atom, results in a more pronounced spin splitting in the valence bands. We will focus on the first three valence bands, the top one of which mainly has $p_z$ character whereas the two lower bands, which are degenerate at the $Z$-point, are formed by $p_x$ and $p_y$ orbitals. The crystal field splitting between bands of $p_z$ and $p_{x,y}$ characters results from the distortion of the ideal Te-Ge$_6$ octahedron.
-\section{Band structure}
-% % ~\centering
-\begin{figure}[b!]
-\IncludeGraphics[width=\linewidth]{interference.png}
-\caption{\label{fig:interference}Interference between orbitals with nonzero OAM. Three neighboring unit cells are displayed, each with the same $p_x + ip_z$ orbital (thus having nonzero $l_y$). The wave functions of the left and right unit cells have their phase rotated by the plane-wave part $e^{i k_x R_x}$. The amplitude and phase of the wave function are encoded with the length and polar angle of the arrows.}
-\end{figure}
-The bands we will focus on most are the three topmost valence bands. As seen in Fig. \ref{fig:eigvalsdos}-(a), these bands have the largest spin-splitting, giving already a hint that as shown above, the atomic SOC is an important part, since it's bigger on Te, where the orbitals comprising these bands originate from. If one were to fit the dispersion from the topmost valence band to the form of the Rashba Hamiltonian \cite{Rashba1959SymmetryAr, Lifshitz1982CourseTheory},
-\begin{equation}\label{eq:relrashba}
-\mathcal{H}_R=\alpha_R (\bm{k} \times \bm{E})\cdot \bm{\sigma}, \quad \alpha_R=\frac{e\hbar^2}{2m^2c^2},
-\end{equation}
-it would result in an abnormally large $\alpha_R\approx 30.7$~eV\.\angstrom \cite{DiSante2013}, while, as discussed before, a more realistic prefactor would be $\alpha_R=10^{-6}$~eV in the purely relativistic case inside the vacuum. This is even more abnormal considering the fact that this is a bulk material, and that it is known that proper ferroelectrics have zero polarization in open boundary conditions because the depolarizing fields are not screened. Moreover, in the periodic boundary conditions utilized by DFT, the potential mimics short circuit boundary conditions \cite{Meyer2008AbFields}, $\bm E=0$, which results in zero contribution from Eq. \ref{eq:relrashba}. 
-
-The last issue with the purely relativistic explanation, which has been confirmed experimentally\cite{Krempasky2015SurfaceSemiconductor}, lies in the orientation of the spin polarization of the split bands. According to Eq. \ref{eq:relrashba}, they should all be lined up. However, as has been shown and will be confirmed by our results below, the orientation depends on the character of the band, more specifically the value of the total angular momentum $j$. 
-
 \begin{figure}[t]
 ~\centering
 \IncludeGraphics[width=\linewidth]{overlapdip.pdf}\caption{\label{fig:overlapdip} Overlap dipoles of orbitals in neighboring unit cells. (a) Nonzero dipole coming from shifted $p$ orbitals. (b) Dipoles of shifted $d$ orbitals compensate at a high symmetry point.}
@@ -153,53 +139,53 @@ The last issue with the purely relativistic explanation, which has been confirme
 \IncludeGraphics[width=0.49\linewidth]{OAMvsK2.png}
 \caption{Comparison between the real-space observables and energy dispersion in (a) the first and (b) third valence band. The values are plotted in function of the relative distance from the $Z$ point $\bm{k}_r = \bm{k} - \bm{k}_Z$, towards the A and U points. The green graphs denote the values before turning on atomic SOC, whereas the orange and blue graphs denote the two spin-split bands.}\label{fig:oamvseigvalv}
 \end{figure*}
-Wannier representation allows us to elucidate the $k$-dependent electric dipole moment arising due to interference of the atomic orbitals on the neighboring sites \cite{Marzari2012MaximallyApplications}. In order to obtain the effective Hamiltonian, we write the Bloch functions as linear combinations of the Wannier functions that describe the bands of interest: $$\psi_{\bm{k}}(\bm{r})=\sum_{\alpha,\bm{R}} c_\alpha(\bm{k}) w_\alpha(\bm{r}-\bm{R})e^{i\bm{k}\bm{R}},$$ where the Wannier functions $w_\alpha(r)$ are chosen to be real and $\bm{R}$ denote the unit cell in which the orbital is centered.
+% Wannier representation allows us to elucidate the $k$-dependent electric dipole moment arising due to interference of the atomic orbitals on the neighboring sites \cite{Marzari2012MaximallyApplications}. In order to obtain the effective Hamiltonian, we write the Bloch functions as linear combinations of the Wannier functions that describe the bands of interest: $$\psi_{\bm{k}}(\bm{r})=\sum_{\alpha,\bm{R}} c_\alpha(\bm{k}) w_\alpha(\bm{r}-\bm{R})e^{i\bm{k}\bm{R}},$$ where the Wannier functions $w_\alpha(r)$ are chosen to be real and $\bm{R}$ denote the unit cell in which the orbital is centered.
 
-In the case of GeTe the electric polarization is along the $z$ direction, making it sufficient to focus on the corresponding dipole moment
-\begin{align}
-d_z(\bm{k}) &=e\sum_{\alpha,\beta,\bm{R}}A_{\alpha,\beta}(\bm{k})e^{i\bm{k}.\bm{R}} \, \mathcal{Z}_{\alpha,\beta}^{\bm{R}} \\
-A_{\alpha,\beta}(\bm{k}) &= c_{\alpha}^*(\bm{k}) c_\beta(\bm{k}) \\
-\mathcal{Z}_{\alpha,\beta}^{\bm{R}} &= \int d\bm{r}   w_{\alpha}(\bm{r})w_\beta(\bm{r}-\bm{R}) z. \label{eq:Znn}
-\end{align}
-Expanding each term around $k_Z$, and keeping contributions up to first order in $\bm{k}^r = (k_Z - \bm{k})$, one obtains
-\begin{align}\label{eq:dip}
-d_z(\bm{k}) =e\sum_{\alpha,\beta,\bm{R}} &\left(A_{\alpha,\beta}(Z) + \bm{k}^r \left.\frac{\partial A_{\alpha,\beta}(\bm{k}) }{\partial \bm{k}}\right\rvert_{\bm{k}=Z}\right) \times \nonumber \\ 
-&(1 + i\bm{k}^r \cdot \bm{R}) \mathcal{Z}_{\alpha,\beta}^{\bm{R}}.
-\end{align}
-The term that combines the first order variation of $A_{\alpha,\beta}(\bm{k})$ with the zeroth order term from the exponent leads to a nonzero contribution only if $w_\alpha, w_\beta = s, p_z$ in the same unit cell ($\bm{R}=0$).
-This is the charge asymmetry that comes from $s$-$p_z$ hybridization and was previously considered in the context of giant spin splitting at surfaces in Refs.~\citenum{Petersen2000SimpleStates,Go2016SurfacePhysics} and for bulk perovskites in Ref.~\citenum{Kim2014}.
-The new terms that we consider here combine the zeroth and first order contributions to $A_{\alpha,\beta}(\bm{k})$ with the first order $i\bm{k}^r \cdot \bm{R}$ term.
-Using indices $1,2,3$ to denote $p_x, p_y, p_z$ Wannier functions one obtains the following relation between the Bloch function coefficients and the OAM: $l_k(\bm{k}) = -i \epsilon_{ijk} A_{ij}$.%\sa{only for pure $p_x$ etc. functions}
+% In the case of GeTe the electric polarization is along the $z$ direction, making it sufficient to focus on the corresponding dipole moment
+% \begin{align}
+% d_z(\bm{k}) &=e\sum_{\alpha,\beta,\bm{R}}A_{\alpha,\beta}(\bm{k})e^{i\bm{k}.\bm{R}} \, \mathcal{Z}_{\alpha,\beta}^{\bm{R}} \\
+% A_{\alpha,\beta}(\bm{k}) &= c_{\alpha}^*(\bm{k}) c_\beta(\bm{k}) \\
+% \mathcal{Z}_{\alpha,\beta}^{\bm{R}} &= \int d\bm{r}   w_{\alpha}(\bm{r})w_\beta(\bm{r}-\bm{R}) z. \label{eq:Znn}
+% \end{align}
+% Expanding each term around $k_Z$, and keeping contributions up to first order in $\bm{k}^r = (k_Z - \bm{k})$, one obtains
+% \begin{align}\label{eq:dip}
+% d_z(\bm{k}) =e\sum_{\alpha,\beta,\bm{R}} &\left(A_{\alpha,\beta}(Z) + \bm{k}^r \left.\frac{\partial A_{\alpha,\beta}(\bm{k}) }{\partial \bm{k}}\right\rvert_{\bm{k}=Z}\right) \times \nonumber \\ 
+% &(1 + i\bm{k}^r \cdot \bm{R}) \mathcal{Z}_{\alpha,\beta}^{\bm{R}}.
+% \end{align}
+% The term that combines the first order variation of $A_{\alpha,\beta}(\bm{k})$ with the zeroth order term from the exponent leads to a nonzero contribution only if $w_\alpha, w_\beta = s, p_z$ in the same unit cell ($\bm{R}=0$).
+% This is the charge asymmetry that comes from $s$-$p_z$ hybridization and was previously considered in the context of giant spin splitting at surfaces in Refs.~\citenum{Petersen2000SimpleStates,Go2016SurfacePhysics} and for bulk perovskites in Ref.~\citenum{Kim2014}.
+% The new terms that we consider here combine the zeroth and first order contributions to $A_{\alpha,\beta}(\bm{k})$ with the first order $i\bm{k}^r \cdot \bm{R}$ term.
+% Using indices $1,2,3$ to denote $p_x, p_y, p_z$ Wannier functions one obtains the following relation between the Bloch function coefficients and the OAM: $l_k(\bm{k}) = -i \epsilon_{ijk} A_{ij}$.%\sa{only for pure $p_x$ etc. functions}
 
 % \begin{figure}[t]
 % ~\centering
 % \IncludeGraphics[width=\linewidth]{1_1.png}\caption{\label{fig:overlaparrows} Dipoles due to interference for $p$, $d$ and $f$ orbitals, with maximal angular momentum projection, $\psi\sim e^{i l\phi}$, are shown in panels (a) - c) respectively. Black and blue arrows denote the complex phases of wavefunctions in neighboring unit cells, where the red arrow shows the resulting complex amplitude of the total Bloch function due to interference of the orbitals. The overlapping orbitals where spaced apart for visual clarity.}
 % \end{figure}
-Upon closer inspection of the overlap dipole, $\mathcal{Z}_{\alpha,\beta}^{\bm{R}}$, one concludes that for $d_z$ to be nonzero, at least one of the orbitals $\alpha,\beta$ needs to be the $p_z$ orbital and the shift-vector $\bm{R}$ has to have a component along the second orbital ($p_x$ or $p_y$). This is illustrated in Fig.~\ref{fig:overlapdip}(a). 
+% Upon closer inspection of the overlap dipole, $\mathcal{Z}_{\alpha,\beta}^{\bm{R}}$, one concludes that for $d_z$ to be nonzero, at least one of the orbitals $\alpha,\beta$ needs to be the $p_z$ orbital and the shift-vector $\bm{R}$ has to have a component along the second orbital ($p_x$ or $p_y$). This is illustrated in Fig.~\ref{fig:overlapdip}(a). 
 % Another requirement for this term to be nonzero is that the orbitals have odd parity, such as $p$ and $f$. This is highlighted in Fig.~\ref{fig:overlaparrows}. If they have even parity (as is the case for the $d$ orbitals displayed in Fig.~\ref{fig:overlapdip}(b) and ~\ref{fig:overlaparrows}(b)), the overlap dipoles from neighboring unit cells will cancel. 
-Filling this into Eq.~(\ref{eq:dip}) and summing over the nearest neighbor unit cells ($\bm{R} = \pm 1$), we arrive at
-\begin{align}\label{eq:dipfinal}
-    d_z(\bm{k}) &= 4e \left(l_x(Z) + \bm{k}^r \left.\frac{\partial l_x(\bm{k}) }{\partial \bm{k}}\right\rvert_{\bm{k}=Z}\right) k^r_yR_y \mathcal{Z}_{y,z}^{R_y}\nonumber \\
-    &  - 4e\left(l_y(Z) + \bm{k}^r \left.\frac{\partial l_y(\bm{k}) }{\partial \bm{k}}\right\rvert_{\bm{k}=Z}\right) k^r_xR_x \mathcal{Z}_{x,z}^{R_x}.
-\end{align}
-The coupling of the electric dipole moment with an external electric field, or in the case of GeTe, with the electric polarization, leads to a contribution to the Hamiltonian of the form:
-\begin{equation}\label{HOR}
-    \mathcal{H}_{OR} \propto \bm{l} \cdot ( \bm{k} \times \bm{E})
-\end{equation}
-The terms with $l_{x,y}(Z)$ lead to a linear $k$-dependence of the band energy if the atomic SOC partially unquenches the OAM.
-The second term leads to energy contribution, quadratic in $k$, but results in a linear variation of the OAM even in the absence of SOC. This linear variation of the OAM will then couple to $\bm{\sigma}$ [also referred to as spin angular momentum (SAM)] through the atomic SOC, leading to the linear spin splitting.
+% Filling this into Eq.~(\ref{eq:dip}) and summing over the nearest neighbor unit cells ($\bm{R} = \pm 1$), we arrive at
+% \begin{align}\label{eq:dipfinal}
+%     d_z(\bm{k}) &= 4e \left(l_x(Z) + \bm{k}^r \left.\frac{\partial l_x(\bm{k}) }{\partial \bm{k}}\right\rvert_{\bm{k}=Z}\right) k^r_yR_y \mathcal{Z}_{y,z}^{R_y}\nonumber \\
+%     &  - 4e\left(l_y(Z) + \bm{k}^r \left.\frac{\partial l_y(\bm{k}) }{\partial \bm{k}}\right\rvert_{\bm{k}=Z}\right) k^r_xR_x \mathcal{Z}_{x,z}^{R_x}.
+% \end{align}
+% The coupling of the electric dipole moment with an external electric field, or in the case of GeTe, with the electric polarization, leads to a contribution to the Hamiltonian of the form:
+% \begin{equation}\label{HOR}
+%     \mathcal{H}_{OR} \propto \bm{l} \cdot ( \bm{k} \times \bm{E})
+% \end{equation}
+% The terms with $l_{x,y}(Z)$ lead to a linear $k$-dependence of the band energy if the atomic SOC partially unquenches the OAM.
+% The second term leads to energy contribution, quadratic in $k$, but results in a linear variation of the OAM even in the absence of SOC. This linear variation of the OAM will then couple to $\bm{\sigma}$ [also referred to as spin angular momentum (SAM)] through the atomic SOC, leading to the linear spin splitting.
 
-The energy dispersion close to the $Z$ point can thus be modeled by
-\begin{equation}\label{eq:hami}
-\epsilon(\bm{k}) = \epsilon(Z) + \lambda_{so} \bm{l}\cdot \bm{\sigma} + c_1 \bm{l} \cdot ( \bm{k} \times \bm{E})+ c_2 l_z^2,
-\end{equation}
-where $\epsilon(Z)$ contains a constant band shift, while the term with $\lambda$ is the atomic spin-orbit coupling, and the latter terms represent the contribution due to the threefold symmetric crystal field for $l=1$.
-To explicitly show how the linear variation of the OAM arises from the terms in Eq.~(\ref{eq:dipfinal}), we performed a $k\cdot p$-expansion of the first valence band which leads to following expressions for the OAM around $k=Z$:
-\begin{align}\label{eq:OAM}
-l_x &= -\frac{\lambda_{so}\sigma_x - c_1 E_z k_y}{c_2} \\
-l_y &= -\frac{\lambda_{so}\sigma_y + c_1 E_z k_x}{c_2},\nonumber
-\end{align}
-where we only included terms with the $E_z$ component.
+% The energy dispersion close to the $Z$ point can thus be modeled by
+% \begin{equation}\label{eq:hami}
+% \epsilon(\bm{k}) = \epsilon(Z) + \lambda_{so} \bm{l}\cdot \bm{\sigma} + c_1 \bm{l} \cdot ( \bm{k} \times \bm{E})+ c_2 l_z^2,
+% \end{equation}
+% where $\epsilon(Z)$ contains a constant band shift, while the term with $\lambda$ is the atomic spin-orbit coupling, and the latter terms represent the contribution due to the threefold symmetric crystal field for $l=1$.
+% To explicitly show how the linear variation of the OAM arises from the terms in Eq.~(\ref{eq:dipfinal}), we performed a $k\cdot p$-expansion of the first valence band which leads to following expressions for the OAM around $k=Z$:
+% \begin{align}\label{eq:OAM}
+% l_x &= -\frac{\lambda_{so}\sigma_x - c_1 E_z k_y}{c_2} \\
+% l_y &= -\frac{\lambda_{so}\sigma_y + c_1 E_z k_x}{c_2},\nonumber
+% \end{align}
+% where we only included terms with the $E_z$ component.
 \begin{figure}
 \IncludeGraphics[width=.7\columnwidth]{diffdens}
 \caption{\label{Fig:diffdens}The variation of the charge density of the Bloch function of the first valence band $\left.\frac{\partial |\psi(k)|^2}{\partial k}\right\rvert_{k=Z}$ away from $Z$ towards $A$. Te and Ge ions are in red and blue, respectively. The charge asymmetry around Ge showcases the nonzero dipole moment along $z$, which couples to the local electric field near Ge ion.}
@@ -238,9 +224,21 @@ where we only included terms with the $E_z$ component.
 \end{figure*}
 
 \section{Methods}
-To back up this qualitative analysis, we performed quantitative ab initio calculations to study how the discussed effects manifest themselves in GeTe. Since we are interested in understanding the mechanism on a microscopic level, we use a tight-binding formalism based on Wannier functions \cite{Marzari2012MaximallyApplications}. The gauge freedom during the Wannierization can then be exploited to provide a set of basis functions which are localized and resemble closely the atomic orbitals (spherical harmonics). To this end we first performed a nonrelativistic DFT calculation using the Quantum-Espresso package \cite{Giannozzi2009}. We used 10x10x10 and 12x12x12 Monkhorst-Pack grids for sampling the reciprocal space in the self-consistent density and non-self-consistent calculations respectively, as well as an energy convergence threshold of $10^{-8}$~Ry in both calculations. We used ONCVPSP pseudopotentials. The energy and density cutoffs were set to 56~Ry and 500~Ry respectively.
+To analyze and confirm the earlier made statements and observations, we performed ab-initio DFT calculations using the Quantum-Espresso software package\cite{Giannozzi2009}. Both non- and fully-relativistic calculations were performed to confirm the existence of the linear varying OAM even when spin-orbit is not included. Both calculations were performed using ONCVPSP pseudopotentials, with energy cutoffs of 40 Ry for the energy cutoff, and 160Ry for the density cutoff. The reciprocal space was sampled using a 10x10x10 and 6x6x6 Monkhorst-Pack grid for the self-consistent and non-self-consistent calculations, respectively, using an energy convergence threshold of $10^{-7}$. Afterwards we used the Wannier90 \cite{Mostofi2014AnFunctions} package to perform the Wannierization, using atomic $s$ and $p$-orbitals on both Ge and Te. This provides us with the tools to analyse the localized properties of the Bloch functions such as the dipole moment and OAM. 
 
-We then employed the Wannier90 software \cite{Mostofi2014AnFunctions} to perform the Wannier interpolation of the bands close to the Fermi level, using projections onto s and p orbitals of both the Ge and Te ions. Only the projective step in the Wannierization was used to obtain Wannier functions that have the symmetry of the initial projections and therefore resemble the atomic orbitals as closely as possible. This nonetheless resulted in adequately localized Wannier functions with a total spread of 21.12 $\angstrom ^2$. The Wannier functions can then be exploited to compute how the observables of interest evolve as we progress through the Brillouin zone (BZ). There is, however, one last hurdle to overcome. We are interested in relativistic effects, therefore SOC has to be accounted for. Since at present Wannier90 can not output the Wannier functions from fully-relativistic DFT calculations, we applied the atomic SOC by adding $\lambda_{so} \bm{l} \cdot \bm{\sigma}$ term to the Wannier tight-binding Hamiltonian obtained from a collinear calculation. The matrix elements of $l$ operator were computed from the Wannier functions from the collinear calculation. $\lambda_{so}$ parameters were fitted to reproduce the band structure from a relativistic DFT calculation, resulting in $\lambda_{so}^{Te}=0.33, \lambda_{so}^{Ge}=-0.07$~eV. We only include SOC terms between Wannier functions that are centered at the same atom. This is referred to as the atomic centered approximation.
+\section{Band structure}
+% % ~\centering
+\begin{figure}[b!]
+\IncludeGraphics[width=\linewidth]{interference.png}
+\caption{\label{fig:interference}Interference between orbitals with nonzero OAM. Three neighboring unit cells are displayed, each with the same $p_x + ip_z$ orbital (thus having nonzero $l_y$). The wave functions of the left and right unit cells have their phase rotated by the plane-wave part $e^{i k_x R_x}$. The amplitude and phase of the wave function are encoded with the length and polar angle of the arrows.}
+\end{figure}
+The bands we will focus on most are the three topmost valence bands. As seen in Fig. \ref{fig:eigvalsdos}-(a), these bands have the largest spin-splitting, giving already a hint that as shown above, the atomic SOC is an important part, since it's bigger on Te, where the orbitals comprising these bands originate from. If one were to fit the dispersion from the topmost valence band to the form of the Rashba Hamiltonian \cite{Rashba1959SymmetryAr, Lifshitz1982CourseTheory},
+\begin{equation}\label{eq:relrashba}
+\mathcal{H}_R=\alpha_R (\bm{k} \times \bm{E})\cdot \bm{\sigma}, \quad \alpha_R=\frac{e\hbar^2}{2m^2c^2},
+\end{equation}
+it would result in an abnormally large $\alpha_R\approx 30.7$~eV\.\angstrom \cite{DiSante2013}, while, as discussed before, a more realistic prefactor would be $\alpha_R=10^{-6}$~eV in the purely relativistic case inside the vacuum. This is even more abnormal considering the fact that this is a bulk material, and that it is known that proper ferroelectrics have zero polarization in open boundary conditions because the depolarizing fields are not screened. Moreover, in the periodic boundary conditions utilized by DFT, the potential mimics short circuit boundary conditions \cite{Meyer2008AbFields}, $\bm E=0$, which results in zero contribution from Eq. \ref{eq:relrashba}. 
+
+The last issue with the purely relativistic explanation, which has been confirmed experimentally\cite{Krempasky2015SurfaceSemiconductor}, lies in the orientation of the spin polarization of the split bands. According to Eq. \ref{eq:relrashba}, they should all be lined up. However, as has been shown and will be confirmed by our results below, the orientation depends on the character of the band, more specifically the value of the total angular momentum $j$. 
 
 % We performed ab initio calculations to study how the discussed effects manifest themselves in GeTe. To arrive at the desired basis of Wannier functions and tight-binding Hamiltonian, we first performed a collinear DFT calculation using the Quantum-Espresso package \cite{Giannozzi2009}, followed by WANNIER90 \cite{Mostofi2014AnFunctions}. For the DFT calculation we used a 10x10x10 Monkhorst-Pack k-grid, as well as an energy convergence threshold of $10^{-8}$~Ry. In the Wannierization step the gauge freedom of Wannier functions was exploited to arrive at a set of basis functions which are localized \cite{Marzari2012MaximallyApplications}, and resemble closely the atomic orbitals (spherical harmonics). Afterwards we added atomic SOC in the form $\lambda_{so} \bm{l} \cdot \bm{\sigma}$ using the muffin-tin approximation, with $\lambda_{so}$ for both atoms used as fitting parameters. Using this basis and Hamiltonian, we can the calculate the observables of interest, namely the OAM around Te and the dipole of the Bloch functions. 
 \section{Results and Discussion}
