more work on Rashba

--- a/papers/Rashba/Rashba.tex
+++ b/papers/Rashba/Rashba.tex
@@ -76,6 +76,7 @@ The effect of $H_{isb}$ is to mix $p_{x,y}$ and $p_z$ orbitals, e.g. if $\Ket{\a
 \end{align}
 With $l_y = -i\hbar(z \partial_x - x \partial_z )$ we get that
 \begin{equation}
+	\label{eq:oam_from_k}
 	\Bra{\alpha(\bm{k})} l_y \Ket{\alpha(\bm{k})} = c(k_x) = k_x \frac{e E_z \sum_{\bm{n}} n_x^2d_z^0(\bm{n})}{E_{p_z} - E_{p_x}}
 \end{equation}
 \lp{normalization!!}
@@ -95,6 +96,7 @@ when $\alpha,\beta,\gamma$ designate $p_{x,y,z}$. This means that there has to b
 \end{align}
 If we then calculate the linear-with-k varying dipole moment of these Bloch functions, we can recognize the contribution coming from the second term in the $c$ expansion together with the first term in the $e$ expansion as the previously discussed contribution. We can, however, also combine the first term in the $c$ expansion with the second in the $e$ expansion. If we single out this contribution to $d_z(\bm{k})$ we get
 \begin{align}
+	\label{eq:d_z_from_OAM}
 	d_z(\bm{k}) =&  i\sum_{\bm{n},\alpha,\beta} c_\alpha^*(0)c_\beta(0)\bm{k}\cdot\bm{n}\Bra{\alpha(\bm{0})} \hat{d}_z \Ket{\beta(\bm{n})}\\
 	=&i\sum_{\bm{n}} d^0_z(\bm{n}) (c^*_x(0)c_z(0)k_x n_x^2 + c^*_y(0)c_z(0) k_y n_y^2) \\
 	=&\sum_{\bm{n}} d^0_z(\bm{n}) (l_x(0)k_y n_y^2-l_y(0) k_x n_x^2).
@@ -242,9 +244,10 @@ The last issue with the purely relativistic explanation, which has been confirme
 
 % We performed ab initio calculations to study how the discussed effects manifest themselves in GeTe. To arrive at the desired basis of Wannier functions and tight-binding Hamiltonian, we first performed a collinear DFT calculation using the Quantum-Espresso package \cite{Giannozzi2009}, followed by WANNIER90 \cite{Mostofi2014AnFunctions}. For the DFT calculation we used a 10x10x10 Monkhorst-Pack k-grid, as well as an energy convergence threshold of $10^{-8}$~Ry. In the Wannierization step the gauge freedom of Wannier functions was exploited to arrive at a set of basis functions which are localized \cite{Marzari2012MaximallyApplications}, and resemble closely the atomic orbitals (spherical harmonics). Afterwards we added atomic SOC in the form $\lambda_{so} \bm{l} \cdot \bm{\sigma}$ using the muffin-tin approximation, with $\lambda_{so}$ for both atoms used as fitting parameters. Using this basis and Hamiltonian, we can the calculate the observables of interest, namely the OAM around Te and the dipole of the Bloch functions. 
 \section{Results and Discussion}
-Focusing on the topmost valence band, displayed in the left panel of Fig.~\ref{fig:oamvseigvalv}, there are several features that warrant a discussion. The first is that we clearly see the linear variation of the OAM even without SOC, with forms given by Eq.~(\ref{eq:OAM}). Secondly, since only $k_y$ varies along the $A \to Z$ path, it it evident that the OAM along the $y$ axis ($l_y$) vanishes along the entire path. It is only when $k_x$ varies, as the wavevector progresses along the $Z \to U$ path, that we observe a nonvanishing $l_y$. Along this path, the sign of $k_x$ is negative whereas the sign of $k_y$ is positive just as along the $Z-A$ path. This results in a consistent orientation of $l_y$ and $l_x$, given by Eq.~(\ref{eq:OAM}). The third observation is that including atomic SOC is manifestated in the "unquenching" of the OAM. In Fig.~\ref{fig:oamvseigvalv}, as soon as there is an infinitesimal variation of the the wave vector from the time-reversal invariant $Z$-point (where $\bm{l}=0$ due to the symmetry), the unquenching of OAM leads to a nonzero shift in the OAM, with the sign depending on the subband.
+The dispersion, OAM and SAM of the first valence band is shown in the left panel of Fig.~\ref{fig:oamvseigvalv}. Confirming our earlier conclusions, we can see that indeed non-zero, linearly varying OAM is formed as we move away from the high-symmetry $Z$-point. Moreover, the OAM is perpendicular to both the $z$-axis and the $k$ vector, as it should be from Eq.\ref{eq:oam_from_k}. This leads e.g. to $l_y=0$ along the $A \to Z$ path, where only $k_y$ is nonzero. When atomic SOC is included in the orange and blue graphs, we see the splitting that results from having the spin oriented either along or opposite to the already linearly varying OAM. The unquenching of the OAM at the $Z$-point when SOC is included is also clearly visible, together with a change in the slope that is associated with the contribution of Eq. \ref{eq:d_z_from_OAM}. This correlation can also be observed in the panel showing the center of mass $\bar{z}=\int_{\textrm{supercell}}z |\psi(k)|^2$ of the Bloch-functions, giving an idea.
+Focusing on the topmost valence band, displayed in the left panel of , there are several features that warrant a discussion. The first is that we clearly see the linear variation of the OAM even without SOC, with forms given by Eq.~(\ref{eq:OAM}). Secondly, since only $k_y$ varies along the $A \to Z$ path, it it evident that the OAM along the $y$ axis ($l_y$) vanishes along the entire path. It is only when $k_x$ varies, as the wavevector progresses along the $Z \to U$ path, that we observe a nonvanishing $l_y$. Along this path, the sign of $k_x$ is negative whereas the sign of $k_y$ is positive just as along the $Z-A$ path. This results in a consistent orientation of $l_y$ and $l_x$, given by Eq.~(\ref{eq:OAM}). The third observation is that including atomic SOC is manifestated in the "unquenching" of the OAM. In Fig.~\ref{fig:oamvseigvalv}, as soon as there is an infinitesimal variation of the the wave vector from the time-reversal invariant $Z$-point (where $\bm{l}=0$ due to the symmetry), the unquenching of OAM leads to a nonzero shift in the OAM, with the sign depending on the subband.
 
-Lastly, to correlate the changes in the OAM and the dipole of the Bloch function, we computed the $z$ coordinate of the center of mass $\bar{z}=\int_{\textrm{supercell}}z |\psi(k)|^2$, which is proportional to the dipole moment computed around the same reference point. Figure ~\ref{fig:oamvseigvalv} shows the  correlation of the dipole and OAM of the bands, consistent with Eq.~(\ref{eq:dipfinal}), while Fig.~\ref{Fig:diffdens} displays the asymmetric variation of the charge density of the first valence band along the $Z\to A$ path. More specifically, there is a clear development of a nonzero dipole moment around Ge, which couples to the local $E_z$.
+Lastly, to correlate the changes in the OAM and the dipole of the Bloch function, we computed the $z$ coordinate of the center of mass , which is proportional to the dipole moment computed around the same reference point. Figure ~\ref{fig:oamvseigvalv} shows the  correlation of the dipole and OAM of the bands, consistent with Eq.~(\ref{eq:dipfinal}), while Fig.~\ref{Fig:diffdens} displays the asymmetric variation of the charge density of the first valence band along the $Z\to A$ path. More specifically, there is a clear development of a nonzero dipole moment around Ge, which couples to the local $E_z$.
 These considerations also hold true for the third valence band, as seen from the right panel of Fig.~\ref{fig:oamvseigvalv}.
 
 In addition to the magnitude of $\alpha_R$,  other important features are dependent on the orbital character of the bands, unlike in the case of the relativistic Rashba effect, as was discussed above. We see that for states with predominant $j=\frac{3}{2}$ or $j=\frac{1}{2}$ character, the SAM is oriented along or opposite to the OAM, respectively. Comparing the orientations of the SAM and OAM, shown in Fig.~\ref{fig:textures}, we conclude that close to the $Z$-point, the topmost valence band has mostly $j=\frac{3}{2}$ character, whereas the third mostly $j=\frac{1}{2}$.
